Tue Jun 21 19:56:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* internal.h: move rb_thread_io_blocking_region() declaration
	  from intern.h to internal.h. It's still experimental API and
	  need more discussion. [ruby-dev:43698]
	* include/ruby/intern.h: ditto.
	
Tue Jun 21 19:46:23 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_thread.rb (TestThread#test_priority): enable
	  this test again. Current GVL respect thread priority rather
	  than past.
	  
Tue Jun 21 13:25:35 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (readline_getc): applied a patch in
	  #3827 by by Akio Tajima <artonx AT yahoo.co.jp>. (see #3827)

Tue Jun 21 13:16:31 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/extconf.rb: fixed bug, specify --disable-libedit
	  then disable libedit, does not specify then check readline and
	  libedit if failed checking readline. (fixes #3375)

Mon Jun 20 22:52:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (before_exec): use sig_do_nothing instead of SIG_DFL
	  for avoiding a race.
	* process.c (sig_do_nothing): new function.

Mon Jun 20 21:31:03 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (thread_timer): rename timeout_10ms to
	  time_quantum. it's no longer 10ms.

Mon Jun 20 18:46:02 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_cipher.c, ext/openssl/lib/openssl/cipher.rb:
	  Documentation fix by Ippei Obayashi. See #4419.

Mon Jun 20 15:41:33 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/webrick/cookie.rb (WEBrick::Cookie.parse): Revert r31228.
	  r31228 was for allowing the 'Cookie:' header which did not have no
	  SP after ';' for separating cookie-pairs but RFC6265 requires single
	  SP after ';' there.  We allow multiple SPs here for compatibility
	  with older WEBrick version.

	* test/webrick/test_cookie.rb: Test it.

Sun Jun 19 13:31:26 2011  Shota Fukumori  <sorah@tubusu.net>
